--- a/09-CSS-Positioning/homework/homework.css
+++ b/09-CSS-Positioning/homework/homework.css
@@ -7,6 +7,8 @@ archivo en cualquiera de estas carpetas, estás en el lugar equivocado.
 
 /* Arrancaremos este ejercicio por vos: */
 #ejercicioUno {
+    display: block;
+    text-align: center;
 
 }
 
@@ -14,25 +16,66 @@ archivo en cualquiera de estas carpetas, estás en el lugar equivocado.
 /* Ejercicio 2: Posicionar el header */
 
 /* Acá va tu código */
+#header {
+    position: relative;
+}
 
 
 
 /* Ejercicio 3: */
 
 /* Acá va tu código */
-
+#ejercicioDos {
+    display: none;
+}
+ 
 
 
 /* Ejercicio 4: */
 
 /* Acá va tu código */
+#ejercicioTres {
+    position: relative;
+    top: 100px;
+    left: 200px;
+}
 
 
 
 /* Ejercicio 5: */
 
 /* Acá va tu código */
+#ejercicioCuatro {
+    position: fixed;
+    top: 0px;
+    left: 0px;
+}
 
 
 
 /* Ejercicio 6. */
+#ejercicioCinco {
+    display: flex;
+    justify-content: space-around;
+    flex-direction: row-reverse;
+}
+
+/* Ejercicio 7. */
+#ejercicioSiete {
+    display: flex;
+    align-items: center;
+    flex-direction: row-reverse;
+    position: static;
+}
+
+#elementoUno {
+    align-self: flex-start;
+}
+
+#elementoDos {
+    align-self: flex-end;
+}
+
+#elementoTres {
+    align-self: baseline;
+}
